# CEDICA

code/admin/: .gitignore  README.md  pyproject.toml  tailwind.config.js
code/admin/src/core/: bcrypt.py  config.py  cors.py  csrf.py  database.py  enums.py  google.py  permissions.py  seed.py  seed_dev.py
code/admin/src/core/archivos/: __init__.py  archivo.py  archivoEcuestre.py  archivo_jya.py  miembro_archivo.py
code/admin/src/core/auth/: __init__.py  roles.py  user.py
code/admin/src/core/charge/: __init__.py  charge.py
code/admin/src/core/contact/: __init__.py  contactModel.py
code/admin/src/core/content/: __init__.py  content.py  content_user.py
code/admin/src/core/ecuestre/: __init__.py  ecuestreModel.py  pelaje.py  raza.py  sexoEcuestre.py
code/admin/src/core/equipo/: __init__.py  member_user_controller.py  miembro.py  miembro_usuario.py
code/admin/src/core/jya/: __init__.py  institucion_escolar.py  jya.py  jyatutor.py  tutor.py
code/admin/src/core/mail/: __init__.py
code/admin/src/core/payment/: __init__.py  payment.py
code/admin/src/core/payment_method/: __init__.py  payment_method.py
code/admin/src/core/roles/: __init__.py
code/admin/src/core/type_of_payment/: __init__.py  type_of_payment.py
code/admin/src/utils/: status.py
code/admin/src/web/: __init__.py  storage.py
code/admin/src/web/controllers/: __init__.py  _errors.py  _helpers.py  admin.py  cobros.py  contacto.py  content.py  ecuestre.py  graficos.py  jya.py  members.py  payments.py  (+2 more)
code/admin/static/: tailwind_prod.css
code/admin/static/css/: error.css  styles.css
(+135 files in other folders)
